k8s/posts-depl.yaml
# write deployment that will create some podes with container init

# deployment is in bucktet apps/v1
apiVersion: apps/v1

# specify the kinf of object we want to create
kind: Deployment

metadata:
  name: posts-depl
# to specify how this deployment shoul dbehave
spec:
  #number of pods we want to create running some perticuler image
  replicas: 1
  # selector takes a look at the all the different pod that has been ever created  with a label of app posts
  selector:
    matchLabels:
      app: posts
  # configuration forthe pod this deployment is going to create. here we aretelling to deployment that , we want this pod to have label of app posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: syeda/posts:0.0.1
