k8s/client-depl.yaml
# wirte code for clusterIP services

# deployment for event bus
# deployment is in bucktet apps/v1
apiVersion: apps/v1

# specify the kind of object we want to create
kind: Deployment

metadata:
  name: client-depl
# to specify how this deployment should behave
spec:
  #number of pods we want to create running some perticuler image
  replicas: 1
  # selector takes a look at the all the different pod that has been ever created  with a label of app client
  selector:
    matchLabels:
      app: client
  # configuration forthe pod this deployment is going to create. here we aretelling to deployment that , we want this pod to have label of app client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          # adding no version/ adding lates makes sure that it gets the latest version
          image: syedaismatfarjana09/client:latest

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    # tellthe service to direct any event with the label of app: client
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
