k8s/event-bus-depl.yaml
# wirte code for clusterIP services

# services are inthe bucket v1
apiVersion: v1
#Specifying the kind of object we are creating
kind: Service

metadata:
  # name of the service
  name: event-bus-srv
spec:
  # setting up the type of service, nodeport : exposes the set of pods to outside world
  type: NodePort
  # we are telling selector to find out all the pods with the label of app: event-bus, then expose it to world
  # slector and label are very similer to class in html in nature
  selector:
    app: event-bus
  # the same port used in our sourcecode index.js file to run the service
  ports:
    - name: event-bus
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    # tellthe service to direct any event with the label of app: event-bus
    app: event-bus
  # adding type of cluster service  is optional, cause if not included, kubernetes will default create one
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
